tests/ui/enum-discriminant/wrapping_niche.stderr
error: layout_of(UnsignedAroundZero) = Layout {
           size: Size(2 bytes),
           align: AbiAlign {
               abi: Align(2 bytes),
           },
           backend_repr: Scalar(
               u16 is (..=1) | (65535..),
           ),
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: u16,
                   valid_range: (..=1) | (65535..),
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: u16 is (..=1) | (65535..),
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [],
                       fields_in_memory_order: [],
                       largest_niche: None,
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [],
                       fields_in_memory_order: [],
                       largest_niche: None,
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [],
                       fields_in_memory_order: [],
                       largest_niche: None,
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(2 bytes),
           repr_c: false,
           randomization_seed: 2648004449468912780,
       }
  --> $DIR/wrapping_niche.rs:8:1
   |
LL | enum UnsignedAroundZero {
   | ^^^^^^^^^^^^^^^^^^^^^^^

error: layout_of(SignedAroundZero) = Layout {
           size: Size(2 bytes),
           align: AbiAlign {
               abi: Align(2 bytes),
           },
           backend_repr: Scalar(
               i16 is -1..=1,
           ),
           fields: Arbitrary {
               offsets: [
                   Size(0 bytes),
               ],
               in_memory_order: [
                   0,
               ],
           },
           largest_niche: Some(
               Niche {
                   offset: Size(0 bytes),
                   value: i16,
                   valid_range: (..=1) | (65535..),
               },
           ),
           uninhabited: false,
           variants: Multiple {
               tag: i16 is -1..=1,
               tag_encoding: Direct,
               tag_field: 0,
               variants: [
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [],
                       fields_in_memory_order: [],
                       largest_niche: None,
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [],
                       fields_in_memory_order: [],
                       largest_niche: None,
                       uninhabited: false,
                   },
                   VariantLayout {
                       size: Size(2 bytes),
                       backend_repr: Memory {
                           sized: true,
                       },
                       field_offsets: [],
                       fields_in_memory_order: [],
                       largest_niche: None,
                       uninhabited: false,
                   },
               ],
           },
           max_repr_align: None,
           unadjusted_abi_align: Align(2 bytes),
           repr_c: false,
           randomization_seed: 10738146848450213996,
       }
  --> $DIR/wrapping_niche.rs:17:1
   |
LL | enum SignedAroundZero {
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

